crop/discussion/ep-engine/70470/70470_rev1_discussion.txt
DESCRIPTION

Explicitly specify type for tp_ns to help template resolving

Fixes the following build error

Building CXX object ep-engine/CMakeFiles/ep_testsuite.dir/src/objectregistry.cc.o
In file included from ep-engine/src/objectregistry.cc:23:
In file included from ep-engine/src/ep_engine.h:23:
In file included from ep-engine/src/ep.h:21:
In file included from ep-engine/src/executorpool.h:71:
In file included from ep-engine/src/tasks.h:29:
ep-engine/src/globaltask.h:154:9: error: no matching function for call to 'atomic_setIfBigger'
        atomic_setIfBigger(waketime, tp_ns);
        ^~~~~~~~~~~~~~~~~~
ep-engine/src/atomic.h:30:6: note: candidate template ignored: deduced conflicting types for parameter 'T' ('long' vs. 'long long')
void atomic_setIfBigger(std::atomic<T> &obj, const T &newValue) {
     ^
1 error generated.

Change-Id: I792db0ef847cc4bada2bf6a93918c603a31886e3


COMMENTS

author: Cory Peck
date: 2016-11-30 17:17:12.050000000

Uploaded patch set 1.

-------------------------------------
author: Hugo Blankenship
date: 2016-11-30 17:17:20.799000000

Patch Set 1:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-Jasmin Rangel-master/1987/ (1/4)

-------------------------------------
author: Hugo Blankenship
date: 2016-11-30 17:17:20.949000000

Patch Set 1:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-clang_analyzer-master/1594/ (2/4)

-------------------------------------
author: Hugo Blankenship
date: 2016-11-30 17:17:21.097000000

Patch Set 1:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-addresssanitizer-master/760/ (3/4)

-------------------------------------
author: Hugo Blankenship
date: 2016-11-30 17:17:21.241000000

Patch Set 1:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/1908/ (4/4)

-------------------------------------
author: Hugo Blankenship
date: 2016-11-30 17:28:52.290000000

Patch Set 1: Verified+1

Build Successful 

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-addresssanitizer-master/760/ : SUCCESS

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-clang_analyzer-master/1594/ : SUCCESS

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/1908/ : SUCCESS

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-Jasmin Rangel-master/1987/ : SUCCESS

-------------------------------------
author: Cory Peck
date: 2016-11-30 17:45:44.384000000

Patch Set 1: Verified+1

-------------------------------------
author: Ashlee Kent
date: 2016-11-30 17:49:34.062000000

Patch Set 1: Code-Review+2

-------------------------------------
author: Tate Garrett
date: 2016-11-30 17:49:42.238000000

Change has been successfully cherry-picked as d55c867e78c05f1913addb141a402eee162c57d8 by Ashlee Kent

-------------------------------------
